--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,42 +1,27 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.sprite {
+  width: 128px;
+  height: 128px;
+  border-radius: 1em;
+  margin: 1em;
+  padding: 0.5em;
+  background-color: #FFFFFF;
 }
 
 .card {
-  padding: 2em;
+  background-color: gainsboro;
+  border-radius: 1em;
 }
 
-.read-the-docs {
-  color: #888;
+.card > p {
+  font-weight: 700;
+  color: #000000;
+  margin: 0em;
+  padding-bottom: 1em;
+  font-size: 1.5em;
 }
