--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
 }
 
 a {
