--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -10,11 +10,11 @@
   border-radius: 1em;
   margin: 1em;
   padding: 0.5em;
-  background-color: #FFFFFF;
+  background-color: #cad2c5;
 }
 
 .card {
-  background-color: gainsboro;
+  background-color: #354f52;
   border-radius: 1em;
 }
 
