Main gameloop now playable within the console
Card component refactored to work onclick. Card
selection is dependent on pokemon index number

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -13,9 +13,14 @@
   background-color: #cad2c5;
 }
 
+.card:hover {
+  background-color: #52796f;
+}
+
 .card {
   background-color: #354f52;
   border-radius: 1em;
+  cursor: pointer;
 }
 
 .card > p {
