--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,8 @@
-/* {
-  border: red 1px solid;
-}*/
+* {
+  /*border: red 1px solid;*/
+  margin: 0px;
+  padding: 0px;
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
