--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -57,6 +57,15 @@
 }
 
 .card-back {
-  background-color: maroon;
   transform: rotateY(180deg);
+  background-color: gray;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  border: solid 5px black;
+}
+
+.card-back > img {
+  max-width: 100%;
+  max-height: 100%;
 }
